Fixed z-indexes

--- a/frontend/src/assets/styles/elements/_article-list.scss
+++ b/frontend/src/assets/styles/elements/_article-list.scss
@@ -75,7 +75,7 @@
       right: $side-margin;
       position: absolute;
       bottom: 5px;
-      z-index: 100;
+      z-index: 3;
       a.label {
         color: #fff;
         font-size: 13px;
