--- a/frontend/src/assets/styles/main.scss
+++ b/frontend/src/assets/styles/main.scss
@@ -50,7 +50,7 @@ a {
   position: relative;
   padding-top: $header-height;
   top: 0;
-  z-index: 30;
+  z-index: 20;
 }
 .main-container {
   z-index: 20;
